Controller and Repo Added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=9090
 spring.datasource.url=jdbc:mysql://localhost:3306/ipms
 spring.datasource.username=root
 spring.datasource.password=root
