--- a/pom.xml
+++ b/pom.xml
@@ -80,11 +80,11 @@
 <!--			<artifactId>junit-jupiter</artifactId>-->
 <!--			<scope>test</scope>-->
 <!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.testcontainers</groupId>-->
-<!--			<artifactId>mysql</artifactId>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>mysql</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
