--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port=9090
 spring.datasource.url=jdbc:mysql://localhost:3306/ipms
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
